改进template import，使之支持import jar包中的模板